--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "fastify": "^4.17.0",
-    "httpie": "^1.1.2"
+    "httpie": "^1.1.2",
+    "zod": "^3.21.4"
   }
 }
